--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -409,19 +409,29 @@ Further comparing head movements between the VR section of the seated VR scenari
 
 %=========================================================================================================
 
-\subsection{Graphical Performancee of Mirrorshades Platform}
+\subsection{Graphical Performance}
+\label{stage-1-framerates}
+The overhead of capturing, processing and rendering the camera streams resulted in an overall lower framerate throughout the parallel reality scenario than the seated VR scenario, as shown by figure \ref{framerates_1.png}. The seated VR scenario averaged 52.4 fps compared to 39.2 fps for the parallel reality scenario, representing a 25.2\% slowdown for the parallel reality scenario. Note that the referesh rate of the DK1 is 60Hz and the Mirrorshades Unity application was run with vsync enabled (vsync limits framerate to the refresh rate of the display in order to avoid screen tearing) so any values shown above 60 frames per second in figures \ref{framerates_1.png} and \ref{1-frames-2-up.png} are due to the method used to estimate frames per second values.
 
-The overhead of capturing, processing and rendering the camera streams resulted in an overall lower and more variable framerate throughout the parallel reality scenario than the seated VR scenario. Figure \ref{1-frames-2-up.png} shows framerate against time for participant 1 performing both scenarios and this figure is representative of all participants throughout the stage 1 investigations. Note that the referesh rate of the DK1 is 60Hz and the Mirrorshades Unity application was run with vsync enabled (vsync limits framerate to the refresh rate of the display, in order to avoid screen tearing) so any values shown above 60 frames per second in figure \ref{1-frames-2-up.png} are due to the method used to estimate frames per second values. The periods in the seated VR scenario plot in figure \ref{1-frames-2-up.png} where the plot is roughly level around 60 frames per second represents when the Unity application had reached this vsync limit.
+\begin{figure}[ht]
+	\begin{center}
+		\includegraphics[width=.6\linewidth]{1/framerates_1.png}
+		\caption{Framerates for both seated VR and parallel reality scenarios for all participants.}
+		\label{framerates_1.png}
+	\end{center}
+\end{figure}
+
+In the parallel reality scenarios there was no real correlation between framerates and transitions between real and virtual stimuli, due to the way that the real and virtual graphics are processed. The way that the culling masks used to obscure real visuals when observing virtual visuals and vice-versa are implemented in Unity does not seem to completely prevent the application from processing the unseen visuals; if they did, we would expect to see framerate increase drastically during the real periods, as the rendering overhead of the camera streams is substantially less than that of rendering the 3D environment of the virtual chapel, but this does relation was not exhibited - figure \ref{1-frames-2-up.png} shows framerate against time for participant 1 for both the seated VR scenario (left) and the parallel reality scenario (right), which are representative of all participants during this stage of investigation. The periods in the seated VR scenario plot in figure \ref{1-frames-2-up.png} where the plot is roughly level around 60 frames per second represents when the Unity application had reached the framerate limit imposed by vsync.
 
 \begin{figure}[ht]
 	\begin{center}
 		\includegraphics[width=\linewidth]{1/1-frames-2-up.png}
-		\caption{Framerate against time for seated VR scenario (left) and parallel reality scenario (right) for participant 1.}
+		\caption{Framerate against time for seated VR and parallel reality scenario (right) for participant 1.}
 		\label{1-frames-2-up.png}
 	\end{center}
 \end{figure}
 
-In the parallel reality scenarios there was no real correlation between framerates and transitions between real and virtual stimuli, due to the way that the real and virtual graphics are processed. The way that the culling masks used to obscure real visuals when observing virtual visuals and vice-versa are implemented in Unity does not seem to completely prevent the application from processing the unseen visuals; if they did, we would expect to see framerate increase drastically during the real periods, as the rendering overhead of the camera streams is substantially less than that of rendering the 3D environment of the chapel. The variance in framerate in the parallel reality scenarios instead varies more in accordance to what part of the chapel the participant was directed toward and whether they were moving or standing still, as certain parts of the 3D model are substantially more complex in terms of the number of virtual objects (and thus the number of draw calls required) and rendering moving graphics has an overhead over rendering a static scene. Comparing the parallel reality plot from figure \ref{1-frames-2-up.png} to the plot of distance moved against time for this same participant in figure \ref{1_4up.png} (bottom right) hints at this relationship.
+Instead of varying according to whether the participant was observing real or virtual, the variance in framerate in the parallel reality scenarios instead varies more in accordance to what part of the chapel the participant was directed toward and whether they were moving or standing still, as certain parts of the 3D model are substantially more complex in terms of the number of virtual objects (and thus the number of draw calls required) and rendering moving graphics has an overhead compared to rendering a static scene. Comparing the parallel reality plot from figure \ref{1-frames-2-up.png} to the plot of distance moved against time for the same participant in figure \ref{1_4up.png} (bottom right) hints at this relationship.
 
 %=========================================================================================================
 
@@ -1052,6 +1062,20 @@ seated & 4.5 & 1.472 & 4 & 1.673 \\
 
 %=========================================================================================================
 
+\subsection{Graphical Performance}
+\label{stage-2-1-framerates}
+Framerates throughout the stage 2.1 investigation were largely as was to be expected after the stage 1 performance (see section \ref{stage-1-framerates}), with the seated VR scenario achieving slightly higher overall framerates with a mean of 53.2 fps (for the 3x participants for which these data were recorded) than the parallel reality scenarios that averaged 44.5 fps in scenario 1-3 and 41.1 fps in scenario 1-4. The difference between the seated VR scenario and the parallel reality scenarios was smaller than in investigation 1, with the parallel reality scenarios exhibiting a 16.4\% slowdown compared to the 25.2\% slowdown seen in the stage 1 investigation. The explanation for this is not clear; it could be related to the introduction of the ability to view both real and virtual environments simultaneously via transition 3, which may less complex to render in terms of the culling masks than completely culling real or virtual visuals, or it could simply be a result of a new graphics driver leading to improved performance in particular areas.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=.6\textwidth]{2.1/framerates_2-1.png}
+	\caption{Framerates for seated VR and both parallel reality scenarios for all participants.}
+	\label{framerates_2-1.png}
+	\end{center}
+\end{figure}
+
+%=========================================================================================================
+
 \subsection{Stage 2.1 Summary}
 
 This part of the investigation has provided a first insight into best practices for implementing future parallel reality experiences, by investigating preferences and reactions toward different implementations of the first of the two fundamental aspects of performing transitions between RW and VR visual stimuli discussed in section \ref{design-considerations-for-rw-vr-transitions} - the process by which the visual stimuli of one environment are replaced by those of the other environment. The ability to manually control the balance of RW/VR visuals emerged as preferable to more basic transitions that simply alternate between the default view and the VR view, while adding uncontrolable moments of VR visuals to the default view led to a negative effect upon enjoyment and comfort but a positive effect upon observation and understanding of the relationship between the two constituent environments.
@@ -1369,6 +1393,21 @@ seated & 1.75 & 2.217 & 5 & 0.816 \\
 \end{minipage}
 \end{center}
 \end{table}
+
+%=========================================================================================================
+
+\subsection{Graphical Performance}
+\label{stage-2-2-framerates}
+
+Once again the seated VR scenario provided the highest framerates (for the 2x participants for whom these data were captured) out of the three scenarios with an average of 53.8 fps, with both parallel reality scenarios performing slightly slower with an average of 47.7 fps during the 75/25 scenario and an average of 48.3 fps during the 50/50 scenario, as shown in figure \ref{framerates_2-2.png}. The difference between the seated VR and parallel reality scenarios was further reduced in this stage of the investigation to an 11.3\% slowdown for the parallel reality scenarios, which is lower than the 16.4\% slowdown measured in the stage 2.1 investigation and substantially lower than the 25.2\% slowdown measured in the stage 1 investigation. The fact that the stage 2.2 parallel reality scenarios were predominantly rendering both real and virtual visuals simultaneously lends weight to the possibility discussed in section\ref{stage-2-1-framerates} that this style of rendering presents less complexity than completely culling real or virtual visuals as was the case throughout all of the stage 1 investigations and much of the stage 2.1 investigations.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=.6\textwidth]{2.2/framerates_2-2.png}
+	\caption{Framerates for seated VR and both parallel reality scenarios for all participants.}
+	\label{framerates_2-2.png}
+	\end{center}
+\end{figure}
 
 %=========================================================================================================
 
