Added Osma image to conclusions chapter.

--- a/00_acknowledgements/acknowledgements.tex
+++ b/00_acknowledgements/acknowledgements.tex
@@ -1,4 +1,4 @@
-Amongst others, thanks must go to;
+Amongst others, thanks go to;
 
 \begin{itemize}
 
@@ -8,7 +8,7 @@ Amongst others, thanks must go to;
 	
 	\item Everybody in the Open Virtual Worlds research group for their contributions, both real and virtual.
 	
-	\item All of my fellow research students, particularly the denizens of the venerable `Taint' chat; Ruth Hoffmann, Luke Hutton and Jonathan Ward.
+	\item My fellow research students, particularly the denizens of the venerable `Taint' chat; Ruth Hoffmann, Luke Hutton and Jonathan Ward.
 	
 	\item All of the staff at the School of Computer Science who made things that much more pleasant, academically or otherwise.
 	
