--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -491,7 +491,7 @@ Any investigation into alternate realities is likely to involve discussion of th
 
 Also related is the concept of \textit{involvement}, defined in this context as the psychological state experienced as a consequence of focusing one's energy and attention on a coherent set of stimuli and it is theorized that both involvement and immersion are necessary for experiencing a sense of presence~\cite{Witmer1998}.
 
-\subsection{Waterworth and Waterworth's three dimensions of virtual experience}
+\subsection{Waterworth and Waterworth's Three Dimensions of Virtual Experience}
 \label{waterworthandwaterworth}
 \newcommand{\presencefootnote}{\footnote{\textbf{Presence} in the context of this model is defined as a state of heightened perceptual processing of environmental stimuli (\textit{``a psychological focus on direct perceptual processing''}~\cite{Waterworth2001}) accompanied by lessened conceptual reasoning, whether these environmental stimuli originate from a real environment, a virtual environment, a mixed reality environment, or even from multiple discrete environments.}}
 
