--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -453,7 +453,7 @@ Whilst PSMove has been used successfully for pedestrian position tracking in pre
 
 \subsection{Indoor Atlas}
 
-During the evaluation phase of different IPS and their suitability to the Mirrorshades platform, Finnish startup IndoorAtlas\footnote{\url{https://www.indooratlas.com/}} released the first public beta of their indoor positioning technology that uses the magnetometers found in smartphones to locate a user within a magnetic `fingerprint' of a building, taking inspiration from animals, such as the spiny lobster, that are able to determine their position from the Earth's magnetic field~\cite{Boles2003}. A spin out from research at the University of Oulu in 2009~\cite{Haverinen2009,Haverinen2009a}, with a similar project undertaken by Media Lab researchers in 2011~\cite{Chung2011}, IndoorAtlas exploits how the Earth's magnetic field is distorted by both natural and man-made sources. Indoors, these distortions come from building materials, especially in modern structures employing a framework of metal beams, but also from electrical cabling, HVAC ducting, concrete rebar, etc. By recording a map of these distortions in an offline mapping phase, producing a fingerpint of the magnetic field around a building, the location of a user can be deduced by comparing the readings from their smartphone's magnetometer to this fingerprint.
+During the evaluation phase of different IPS and their suitability to the Mirrorshades platform, Finnish startup IndoorAtlas\footnote{\url{https://www.indooratlas.com/}} released the first public beta of their indoor positioning technology that uses the magnetometers found in smartphones to locate a user within a magnetic `fingerprint' of a building, taking inspiration from animals, such as the spiny lobster, that are able to determine their position from the Earth's magnetic field~\cite{Boles2003}. A spin out from research at the University of Oulu in 2009~\cite{Haverinen2009,Haverinen2009a}, with a similar project undertaken by Media Lab researchers in 2011~\cite{Chung2011}, IndoorAtlas exploits how the Earth's magnetic field is distorted by both natural and man-made sources (distortions that VTW had to \textit{contend} with!). Indoors, these distortions come from building materials, especially in modern structures employing a framework of metal beams, but also from electrical cabling, HVAC ducting, concrete rebar, etc. By recording a map of these distortions in an offline mapping phase, producing a fingerpint of the magnetic field around a building, the location of a user can be deduced by comparing the readings from their smartphone's magnetometer to this fingerprint.
 
 IndoorAtlas represented a good match for the IPS requirements of the Mirrorshades platform. In particular, the lack of dependence upon any deployed infrastructure such as ultrasound beacons or visual tracking targets suits the deployment area of Mirrorshades well, as most cultural heritage sites will not be amenable to the deployment of such hardware. Furthermore, the reliance upon only a smartphone held by the user means that coverage is only limited by the area that has previously been mapped in the offline mapping phase, allowing the positioning to scale to arbitrarily large indoor cultural heritage sites. This dependence upon only a smartphone also meets the low cost requirement of the Mirrorshades platform, as mid to high end smartphones with sensitive magnetometers can presently be purchased for just a few hundred dollars.
 
@@ -672,7 +672,7 @@ Independent or in addition to any of the previous transition types, the maximum 
 
 %=========================================================================================================
 
-\section{The Assembled Mirrorshades parallel reality Platform}
+\section{The Assembled Mirrorshades Parallel Reality Platform}
 
 Figure \ref{experimentalimplementation} presents an overview of the individual components and services that make up the Mirrorshades parallel reality platform as used in user studies at St Salvator's chapel.
 
