--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -11,11 +11,19 @@
 
 Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that replace, augment, diminish and mix with our familiar real world to expand our capabilities and our understanding. This thesis has introduced parallel reality as a new category of alternate reality that comprises two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them. The benefits that such a system imparts upon the user by granting them the ability to explore parallel real and virtual environments in tandem has been shown through the development of the Mirrorshades parallel reality platform and its application to a use case within the realm of cultural heritage, with evaluation of these studies leading to a number of best practices for future parallel reality endeavours.
 
-\begin{figure}[h]
+\begin{figure}[t]
 	\begin{center}
 		\includegraphics[width=\textwidth]{participant-f-4.jpg}
 		\caption{The Mirrorshades parallel reality platform in use at a 15th century chapel.}
 		\label{participant-f-4.jpg}
+	\end{center}	
+\end{figure}
+
+\begin{figure}[t]
+	\begin{center}
+		\includegraphics[width=0.8\textwidth]{osma-twitter.jpg}
+		\caption{Praise for the Mirrorshades platform from IndoorAtlas' senior vice president of engineering.}
+		\label{osma-twitter.jpg}
 	\end{center}	
 \end{figure}
 
