--- a/publications.tex
+++ b/publications.tex
@@ -1,4 +1,4 @@
-Listed beneath are publications generated in relation to the research described in this thesis. These publications were submitted to conferences that adopted a peer review process.
+Listed beneath are publications generated in relation to the research described in this thesis. These publications were accepted to conferences that adopted a peer review process.
 
 \begin{enumerate}
 
